--- a/build.gradle
+++ b/build.gradle
@@ -18,5 +18,14 @@ dependencies {
 test {
     useTestNG() {
         suites "src/test/resources/TestNG.xml"
+        systemProperty "browser", System.getProperty("browser")
     }
+
+}
+task testSmoke(type: Test){
+    useTestNG() {
+        suites "src/test/resources/Smoke.xml"
+        systemProperty "browser", System.getProperty("browser")
+    }
+
 }
